--- a/ansible-redmine-manual/templates/database.j2
+++ b/ansible-redmine-manual/templates/database.j2
@@ -1,7 +1,7 @@
 production:
   adapter: mysql2
-  database: redmine-db
-  host: localhost
-  username: redmine
-  password: redmine-user-pswd
+  database: {{ mysql_database }}
+  host: {{ mysql_host }}
+  username: {{ mysql_user }}
+  password: {{ mysql_password }}
   encoding: utf8mb4
