--- a/ansible-redmine-manual/templates/default.j2
+++ b/ansible-redmine-manual/templates/default.j2
@@ -1,12 +1,13 @@
 upstream app {
-    server unix:/home/redmine/redmine/shared/sockets/puma.sock fail_timeout=0;
+    # Path to Puma SOCK file, as defined previously
+    server unix:{{ redmine_dir }}/shared/sockets/puma.sock fail_timeout=0;
 }
 
 server {
     listen 80;
     server_name localhost;
 
-    root /home/redmine/redmine/public;
+    root {{ redmine_dir }}/public;
 
     try_files $uri/index.html $uri @app;
 
