--- a/ansible-redmine-manual/templates/database.j2
+++ b/ansible-redmine-manual/templates/database.j2
@@ -1,7 +1,7 @@
 production:
   adapter: mysql2
   database: {{ mysql_database }}
-  host: {{ mysql_host }}
+  host: {{ host_name }}
   username: {{ mysql_user }}
   password: {{ mysql_password }}
   encoding: utf8mb4
