--- a/ansible-redmine-manual/templates/puma.rb.j2
+++ b/ansible-redmine-manual/templates/puma.rb.j2
@@ -2,20 +2,18 @@ workers 2
 
 threads 1, 6
 
-app_dir = File.expand_path("../..", __FILE__)
-shared_dir = "#{app_dir}/shared"
-
 rails_env = ENV['RAILS_ENV'] || "production"
 environment rails_env
 
-bind "unix://#{shared_dir}/sockets/puma.sock"
+bind "unix://{{ shared_dir }}/sockets/puma.sock"
 
-pidfile "#{shared_dir}/pids/puma.pid"
-state_path "#{shared_dir}/pids/puma.state"
+pidfile "{{ pids_dir }}/puma.pid"
+state_path "{{ pids_dir }}/puma.state"
 activate_control_app
 
 on_worker_boot do
   require "active_record"
   ActiveRecord::Base.connection.disconnect! rescue ActiveRecord::ConnectionNotEstablished
-  ActiveRecord::Base.establish_connection(YAML.load_file("#{app_dir}/config/database.yml")[rails_env])
+  ActiveRecord::Base.establish_connection(YAML.load_file("{{ config_dir }}/database.yml")[rails_env])
 end
+
